# Hammeregg

./: LICENSE  README.md  pre-commit
egg/: .gitignore  .htmlnanorc.js  .postcssrc  .prettierignore  package.json  tailwind.config.js
egg/.yarn/patches/: ansi-html-community.patch
egg/src/: hammeregg_core.ts  hammeregg_key.ts  index.css  index.html  index.ts  input.ts
hammer/: Cargo.toml  rust-toolchain
hammer/hammeregg_backend/: Cargo.toml  build.rs
hammer/hammeregg_backend/src/: input.rs  key.rs  main.rs  net.rs  pion.rs  stream.rs  work.rs
hammer/hammeregg_backend/src/ui/: keygen.rs  mod.rs  running.rs  screen.rs  setup.rs
hammer/hammeregg_core/: Cargo.toml
hammer/hammeregg_core/src/: lib.rs
hammer/hammeregg_rooster/: Cargo.toml
hammer/hammeregg_rooster/src/: main.rs
hammer/rtp2rtc/: bridge.c  bridge.h  go.mod  go.sum  main.go
