cargo-features = ["strip"]

[workspace]
members = [
    "hammeregg_core",
    "hammeregg_backend",
    "hammeregg_rooster"
]

# Prevents the hour long RSA key generation in debug mode
[profile.dev.package]
num-bigint-dig = { opt-level = 3 }
rsa = { opt-level = 3 }

[profile.release]
lto = true
strip = true
opt-level = 3