[package]
name = "hammeregg_backend"
version = "0.1.0"
authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.44"
atomic_refcell = "0.1.8"
bson = "2.0.0"
eframe = "0.15.0"
futures = "0.3.17"
hammeregg_core = { path = "../hammeregg_core" }
names = { git = "https://github.com/fnichol/names", rev = "630a946" }
rand_chacha = "0.3.1"
rfd = "0.5.1"
rsa = "0.5.0"
rustls-pemfile = "0.2.1"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.11.0", default-features = false, features = ["fs", "rt"] }
tokio-rustls = "0.23.0"
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls-webpki-roots"] }
url = "2.2.2"
webpki-roots = "0.22.1"
zeroize = { version = "1.4.2", features = ["zeroize_derive"] }