[package]
name = "hammeregg_core"
version = "0.1.0"
authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
edition = "2021"

[lib]

[dependencies]
anyhow = "1.0.44"
bson = "2.0.0"
serde = { version = "1.0.130", features = ["derive"] }
tungstenite = "0.16.0"
validator = { version = "0.14.0", features = ["derive"] }